适应性修改